tests/baselines/reference/assignmentCompatWithConstructSignatures4(strict=true).errors.txt
assignmentCompatWithConstructSignatures4.ts(4,18): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
assignmentCompatWithConstructSignatures4.ts(5,34): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
assignmentCompatWithConstructSignatures4.ts(6,38): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
assignmentCompatWithConstructSignatures4.ts(7,39): error TS2564: Property 'bing' has no initializer and is not definitely assigned in the constructor.
assignmentCompatWithConstructSignatures4.ts(44,14): error TS2454: Variable 'b2' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(45,9): error TS2322: Type 'new (x: number) => string[]' is not assignable to type 'new <T, U>(x: T) => U[]'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'number'.
assignmentCompatWithConstructSignatures4.ts(48,14): error TS2454: Variable 'b7' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(49,9): error TS2322: Type 'new (x: (arg: Base) => Derived) => (r: Base) => Derived2' is not assignable to type 'new <T extends Base, U extends Derived, V extends Derived2>(x: (arg: T) => U) => (r: T) => V'.
  Types of parameters 'x' and 'x' are incompatible.
    Types of parameters 'arg' and 'arg' are incompatible.
      Type 'Base' is not assignable to type 'T'.
        'Base' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithConstructSignatures4.ts(52,9): error TS2322: Type 'new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' is not assignable to type 'new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived'.
  Types of parameters 'y' and 'y' are incompatible.
    Types of parameters 'arg2' and 'arg2' are incompatible.
      Type '{ foo: number; }' is not assignable to type 'Base'.
        Types of property 'foo' are incompatible.
          Type 'number' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(52,14): error TS2454: Variable 'b8' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(53,9): error TS2322: Type 'new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived' is not assignable to type 'new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U'.
  Types of parameters 'x' and 'x' are incompatible.
    Types of parameters 'arg' and 'arg' are incompatible.
      Type 'Base' is not assignable to type 'T'.
        'Base' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithConstructSignatures4.ts(57,9): error TS2322: Type 'new <T extends Derived>(...x: T[]) => T' is not assignable to type 'new (...x: Base[]) => Base'.
  Types of parameters 'x' and 'x' are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
assignmentCompatWithConstructSignatures4.ts(57,15): error TS2454: Variable 'b10' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(58,9): error TS2322: Type 'new (...x: Base[]) => Base' is not assignable to type 'new <T extends Derived>(...x: T[]) => T'.
  Type 'Base' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'Base'.
assignmentCompatWithConstructSignatures4.ts(61,9): error TS2322: Type 'new <T extends Derived>(x: T, y: T) => T' is not assignable to type 'new (x: { foo: string; }, y: { foo: string; bar: string; }) => Base'.
  Types of parameters 'x' and 'x' are incompatible.
    Property 'bar' is missing in type '{ foo: string; }' but required in type 'Derived'.
assignmentCompatWithConstructSignatures4.ts(61,15): error TS2454: Variable 'b11' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(62,9): error TS2322: Type 'new (x: { foo: string; }, y: { foo: string; bar: string; }) => Base' is not assignable to type 'new <T extends Derived>(x: T, y: T) => T'.
  Type 'Base' is not assignable to type 'T'.
    'T' could be instantiated with an arbitrary type which could be unrelated to 'Base'.
assignmentCompatWithConstructSignatures4.ts(65,15): error TS2454: Variable 'b12' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(66,9): error TS2322: Type 'new (x: Base[], y: Derived2[]) => Derived[]' is not assignable to type 'new <T extends Derived2[]>(x: Base[], y: Base[]) => T'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'Base[]' is not assignable to type 'Derived2[]'.
      Type 'Base' is missing the following properties from type 'Derived2': baz, bar
assignmentCompatWithConstructSignatures4.ts(69,9): error TS2322: Type 'new <T>(x: { a: T; b: T; }) => T' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ a: string; b: number; }' is not assignable to type '{ a: string; b: string; }'.
      Types of property 'b' are incompatible.
        Type 'number' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(69,15): error TS2454: Variable 'b15' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(70,9): error TS2322: Type 'new (x: { a: string; b: number; }) => number' is not assignable to type 'new <T>(x: { a: T; b: T; }) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ a: T; b: T; }' is not assignable to type '{ a: string; b: number; }'.
      Types of property 'a' are incompatible.
        Type 'T' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(73,9): error TS2322: Type 'new <T extends Base>(x: { a: T; b: T; }) => number' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ a: string; b: number; }' is not assignable to type '{ a: Base; b: Base; }'.
      Types of property 'a' are incompatible.
        Type 'string' is not assignable to type 'Base'.
assignmentCompatWithConstructSignatures4.ts(73,15): error TS2454: Variable 'b15a' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(74,9): error TS2322: Type 'new (x: { a: string; b: number; }) => number' is not assignable to type 'new <T extends Base>(x: { a: T; b: T; }) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ a: T; b: T; }' is not assignable to type '{ a: string; b: number; }'.
      Types of property 'a' are incompatible.
        Type 'T' is not assignable to type 'string'.
          Type 'Base' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(77,9): error TS2322: Type 'new <T>(x: (a: T) => T) => T[]' is not assignable to type '{ new (x: { new (a: number): number; new (a?: number | undefined): number; }): number[]; new (x: { new (a: boolean): boolean; new (a?: boolean | undefined): boolean; }): boolean[]; }'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ new (a: number): number; new (a?: number | undefined): number; }' is not assignable to type '(a: any) => any'.
      Type '{ new (a: number): number; new (a?: number | undefined): number; }' provides no match for the signature '(a: any): any'.
assignmentCompatWithConstructSignatures4.ts(77,15): error TS2454: Variable 'b16' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(78,9): error TS2322: Type '{ new (x: { new (a: number): number; new (a?: number | undefined): number; }): number[]; new (x: { new (a: boolean): boolean; new (a?: boolean | undefined): boolean; }): boolean[]; }' is not assignable to type 'new <T>(x: (a: T) => T) => T[]'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '(a: any) => any' is not assignable to type '{ new (a: number): number; new (a?: number | undefined): number; }'.
      Type '(a: any) => any' provides no match for the signature 'new (a: number): number'.
assignmentCompatWithConstructSignatures4.ts(81,9): error TS2322: Type 'new <T>(x: (a: T) => T) => any[]' is not assignable to type '{ new (x: { new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }): any[]; new (x: { new <T extends Derived2>(a: T): T; new <T extends Base>(a: T): T; }): any[]; }'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }' is not assignable to type '(a: any) => any'.
      Type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }' provides no match for the signature '(a: any): any'.
assignmentCompatWithConstructSignatures4.ts(81,15): error TS2454: Variable 'b17' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(82,9): error TS2322: Type '{ new (x: { new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }): any[]; new (x: { new <T extends Derived2>(a: T): T; new <T extends Base>(a: T): T; }): any[]; }' is not assignable to type 'new <T>(x: (a: T) => T) => any[]'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '(a: any) => any' is not assignable to type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }'.
      Type '(a: any) => any' provides no match for the signature 'new <T extends Derived>(a: T): T'.
assignmentCompatWithConstructSignatures4.ts(89,9): error TS2322: Type 'new <T>(x: T) => string[]' is not assignable to type 'new <T>(x: T) => T[]'.
  Type 'string[]' is not assignable to type 'T[]'.
    Type 'string' is not assignable to type 'T'.
      'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.
assignmentCompatWithConstructSignatures4.ts(89,14): error TS2454: Variable 'b2' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(90,9): error TS2322: Type 'new <T>(x: T) => T[]' is not assignable to type 'new <T>(x: T) => string[]'.
  Type 'T[]' is not assignable to type 'string[]'.
    Type 'T' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(95,9): error TS2322: Type 'new <T>(x: T) => T[]' is not assignable to type 'new <T>(x: T) => string[]'.
  Type 'T[]' is not assignable to type 'string[]'.
    Type 'T' is not assignable to type 'string'.
assignmentCompatWithConstructSignatures4.ts(95,14): error TS2454: Variable 'b3' is used before being assigned.
assignmentCompatWithConstructSignatures4.ts(96,9): error TS2322: Type 'new <T>(x: T) => string[]' is not assignable to type 'new <T>(x: T) => T[]'.
  Type 'string[]' is not assignable to type 'T[]'.
    Type 'string' is not assignable to type 'T'.
      'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.


==== assignmentCompatWithConstructSignatures4.ts (37 errors) ====
    // checking assignment compatibility relations for function types.
    
    module Errors {
        class Base { foo: string; }
                     ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
        class Derived extends Base { bar: string; }
                                     ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
        class Derived2 extends Derived { baz: string; }
                                         ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
        class OtherDerived extends Base { bing: string; }
                                          ~~~~
!!! error TS2564: Property 'bing' has no initializer and is not definitely assigned in the constructor.
    
        module WithNonGenericSignaturesInBaseType {
            // target type with non-generic call signatures
            var a2: new (x: number) => string[];
            var a7: new (x: (arg: Base) => Derived) => (r: Base) => Derived2;
            var a8: new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived;
            var a10: new (...x: Base[]) => Base;
            var a11: new (x: { foo: string }, y: { foo: string; bar: string }) => Base;
            var a12: new (x: Array<Base>, y: Array<Derived2>) => Array<Derived>;
            var a14: {
                    new (x: number): number[];
                    new (x: string): string[];
                };
            var a15: new (x: { a: string; b: number }) => number;
            var a16: {
                    new (x: {
                        new (a: number): number;
                        new (a?: number): number;
                    }): number[];
                    new (x: {
                        new (a: boolean): boolean;
                        new (a?: boolean): boolean;
                    }): boolean[];
                };
            var a17: {
                    new (x: {
                        new <T extends Derived>(a: T): T;
                        new <T extends Base>(a: T): T;
                    }): any[];
                    new (x: {
                        new <T extends Derived2>(a: T): T;
                        new <T extends Base>(a: T): T;
                    }): any[];
                };
    
            var b2: new <T, U>(x: T) => U[]; 
            a2 = b2; // ok
                 ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
            b2 = a2; // ok
            ~~
!!! error TS2322: Type 'new (x: number) => string[]' is not assignable to type 'new <T, U>(x: T) => U[]'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'number'.
!!! related TS2208 assignmentCompatWithConstructSignatures4.ts:43:22: This type parameter might need an `extends number` constraint.
    
            var b7: new <T extends Base, U extends Derived, V extends Derived2>(x: (arg: T) => U) => (r: T) => V;
            a7 = b7; // ok
                 ~~
!!! error TS2454: Variable 'b7' is used before being assigned.
            b7 = a7; // ok
            ~~
!!! error TS2322: Type 'new (x: (arg: Base) => Derived) => (r: Base) => Derived2' is not assignable to type 'new <T extends Base, U extends Derived, V extends Derived2>(x: (arg: T) => U) => (r: T) => V'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Types of parameters 'arg' and 'arg' are incompatible.
!!! error TS2322:       Type 'Base' is not assignable to type 'T'.
!!! error TS2322:         'Base' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
    
            var b8: new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U; 
            a8 = b8; // error, type mismatch
            ~~
!!! error TS2322: Type 'new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' is not assignable to type 'new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Types of parameters 'arg2' and 'arg2' are incompatible.
!!! error TS2322:       Type '{ foo: number; }' is not assignable to type 'Base'.
!!! error TS2322:         Types of property 'foo' are incompatible.
!!! error TS2322:           Type 'number' is not assignable to type 'string'.
                 ~~
!!! error TS2454: Variable 'b8' is used before being assigned.
            b8 = a8; // error
            ~~
!!! error TS2322: Type 'new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived' is not assignable to type 'new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Types of parameters 'arg' and 'arg' are incompatible.
!!! error TS2322:       Type 'Base' is not assignable to type 'T'.
!!! error TS2322:         'Base' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
    
            
            var b10: new <T extends Derived>(...x: T[]) => T; 
            a10 = b10; // ok
            ~~~
!!! error TS2322: Type 'new <T extends Derived>(...x: T[]) => T' is not assignable to type 'new (...x: Base[]) => Base'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithConstructSignatures4.ts:5:34: 'bar' is declared here.
                  ~~~
!!! error TS2454: Variable 'b10' is used before being assigned.
            b10 = a10; // ok
            ~~~
!!! error TS2322: Type 'new (...x: Base[]) => Base' is not assignable to type 'new <T extends Derived>(...x: T[]) => T'.
!!! error TS2322:   Type 'Base' is not assignable to type 'T'.
!!! error TS2322:     'T' could be instantiated with an arbitrary type which could be unrelated to 'Base'.
    
            var b11: new <T extends Derived>(x: T, y: T) => T; 
            a11 = b11; // ok
            ~~~
!!! error TS2322: Type 'new <T extends Derived>(x: T, y: T) => T' is not assignable to type 'new (x: { foo: string; }, y: { foo: string; bar: string; }) => Base'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Property 'bar' is missing in type '{ foo: string; }' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithConstructSignatures4.ts:5:34: 'bar' is declared here.
                  ~~~
!!! error TS2454: Variable 'b11' is used before being assigned.
            b11 = a11; // ok
            ~~~
!!! error TS2322: Type 'new (x: { foo: string; }, y: { foo: string; bar: string; }) => Base' is not assignable to type 'new <T extends Derived>(x: T, y: T) => T'.
!!! error TS2322:   Type 'Base' is not assignable to type 'T'.
!!! error TS2322:     'T' could be instantiated with an arbitrary type which could be unrelated to 'Base'.
    
            var b12: new <T extends Array<Derived2>>(x: Array<Base>, y: Array<Base>) => T; 
            a12 = b12; // ok
                  ~~~
!!! error TS2454: Variable 'b12' is used before being assigned.
            b12 = a12; // ok
            ~~~
!!! error TS2322: Type 'new (x: Base[], y: Derived2[]) => Derived[]' is not assignable to type 'new <T extends Derived2[]>(x: Base[], y: Base[]) => T'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Type 'Base[]' is not assignable to type 'Derived2[]'.
!!! error TS2322:       Type 'Base' is missing the following properties from type 'Derived2': baz, bar
    
            var b15: new <T>(x: { a: T; b: T }) => T; 
            a15 = b15; // ok
            ~~~
!!! error TS2322: Type 'new <T>(x: { a: T; b: T; }) => T' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ a: string; b: number; }' is not assignable to type '{ a: string; b: string; }'.
!!! error TS2322:       Types of property 'b' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
                  ~~~
!!! error TS2454: Variable 'b15' is used before being assigned.
            b15 = a15; // ok
            ~~~
!!! error TS2322: Type 'new (x: { a: string; b: number; }) => number' is not assignable to type 'new <T>(x: { a: T; b: T; }) => T'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ a: T; b: T; }' is not assignable to type '{ a: string; b: number; }'.
!!! error TS2322:       Types of property 'a' are incompatible.
!!! error TS2322:         Type 'T' is not assignable to type 'string'.
!!! related TS2208 assignmentCompatWithConstructSignatures4.ts:68:23: This type parameter might need an `extends string` constraint.
    
            var b15a: new <T extends Base>(x: { a: T; b: T }) => number; 
            a15 = b15a; // ok
            ~~~
!!! error TS2322: Type 'new <T extends Base>(x: { a: T; b: T; }) => number' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ a: string; b: number; }' is not assignable to type '{ a: Base; b: Base; }'.
!!! error TS2322:       Types of property 'a' are incompatible.
!!! error TS2322:         Type 'string' is not assignable to type 'Base'.
                  ~~~~
!!! error TS2454: Variable 'b15a' is used before being assigned.
            b15a = a15; // ok
            ~~~~
!!! error TS2322: Type 'new (x: { a: string; b: number; }) => number' is not assignable to type 'new <T extends Base>(x: { a: T; b: T; }) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ a: T; b: T; }' is not assignable to type '{ a: string; b: number; }'.
!!! error TS2322:       Types of property 'a' are incompatible.
!!! error TS2322:         Type 'T' is not assignable to type 'string'.
!!! error TS2322:           Type 'Base' is not assignable to type 'string'.
    
            var b16: new <T>(x: (a: T) => T) => T[];
            a16 = b16; // error
            ~~~
!!! error TS2322: Type 'new <T>(x: (a: T) => T) => T[]' is not assignable to type '{ new (x: { new (a: number): number; new (a?: number | undefined): number; }): number[]; new (x: { new (a: boolean): boolean; new (a?: boolean | undefined): boolean; }): boolean[]; }'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ new (a: number): number; new (a?: number | undefined): number; }' is not assignable to type '(a: any) => any'.
!!! error TS2322:       Type '{ new (a: number): number; new (a?: number | undefined): number; }' provides no match for the signature '(a: any): any'.
                  ~~~
!!! error TS2454: Variable 'b16' is used before being assigned.
            b16 = a16; // error
            ~~~
!!! error TS2322: Type '{ new (x: { new (a: number): number; new (a?: number | undefined): number; }): number[]; new (x: { new (a: boolean): boolean; new (a?: boolean | undefined): boolean; }): boolean[]; }' is not assignable to type 'new <T>(x: (a: T) => T) => T[]'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '(a: any) => any' is not assignable to type '{ new (a: number): number; new (a?: number | undefined): number; }'.
!!! error TS2322:       Type '(a: any) => any' provides no match for the signature 'new (a: number): number'.
    
            var b17: new <T>(x: (a: T) => T) => any[];
            a17 = b17; // error
            ~~~
!!! error TS2322: Type 'new <T>(x: (a: T) => T) => any[]' is not assignable to type '{ new (x: { new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }): any[]; new (x: { new <T extends Derived2>(a: T): T; new <T extends Base>(a: T): T; }): any[]; }'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }' is not assignable to type '(a: any) => any'.
!!! error TS2322:       Type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }' provides no match for the signature '(a: any): any'.
                  ~~~
!!! error TS2454: Variable 'b17' is used before being assigned.
            b17 = a17; // error
            ~~~
!!! error TS2322: Type '{ new (x: { new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }): any[]; new (x: { new <T extends Derived2>(a: T): T; new <T extends Base>(a: T): T; }): any[]; }' is not assignable to type 'new <T>(x: (a: T) => T) => any[]'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '(a: any) => any' is not assignable to type '{ new <T extends Derived>(a: T): T; new <T extends Base>(a: T): T; }'.
!!! error TS2322:       Type '(a: any) => any' provides no match for the signature 'new <T extends Derived>(a: T): T'.
        }
    
        module WithGenericSignaturesInBaseType {
            // target type has generic call signature
            var a2: new <T>(x: T) => T[];
            var b2: new <T>(x: T) => string[];
            a2 = b2; // ok
            ~~
!!! error TS2322: Type 'new <T>(x: T) => string[]' is not assignable to type 'new <T>(x: T) => T[]'.
!!! error TS2322:   Type 'string[]' is not assignable to type 'T[]'.
!!! error TS2322:     Type 'string' is not assignable to type 'T'.
!!! error TS2322:       'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.
                 ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
            b2 = a2; // ok
            ~~
!!! error TS2322: Type 'new <T>(x: T) => T[]' is not assignable to type 'new <T>(x: T) => string[]'.
!!! error TS2322:   Type 'T[]' is not assignable to type 'string[]'.
!!! error TS2322:     Type 'T' is not assignable to type 'string'.
!!! related TS2208 assignmentCompatWithConstructSignatures4.ts:88:22: This type parameter might need an `extends string` constraint.
    
            // target type has generic call signature
            var a3: new <T>(x: T) => string[];
            var b3: new <T>(x: T) => T[]; 
            a3 = b3; // ok
            ~~
!!! error TS2322: Type 'new <T>(x: T) => T[]' is not assignable to type 'new <T>(x: T) => string[]'.
!!! error TS2322:   Type 'T[]' is not assignable to type 'string[]'.
!!! error TS2322:     Type 'T' is not assignable to type 'string'.
!!! related TS2208 assignmentCompatWithConstructSignatures4.ts:93:22: This type parameter might need an `extends string` constraint.
                 ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
            b3 = a3; // ok
            ~~
!!! error TS2322: Type 'new <T>(x: T) => string[]' is not assignable to type 'new <T>(x: T) => T[]'.
!!! error TS2322:   Type 'string[]' is not assignable to type 'T[]'.
!!! error TS2322:     Type 'string' is not assignable to type 'T'.
!!! error TS2322:       'T' could be instantiated with an arbitrary type which could be unrelated to 'string'.
        }
    }